// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Tests Buttons can be disabled 1`] = `
{
  "Automation Tree": {
    "AutomationId": "disabled_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": false,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": false,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(249, 249, 249, 77)",
            },
            "Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  6,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  861,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -6,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -2,
                  6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  2,
                  43.999969482421875,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -6,
                  -6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  6,
                  -2,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  861,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  -6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  2,
                  43.999969482421875,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              873,
              55.999969482421875,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          873,
          55.999969482421875,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              846,
              29.00006103515625,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          14,
          14,
          0,
        ],
        "Opacity": 1,
        "Size": [
          846,
          29.00006103515625,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "disabled_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      873,
      55.999969482421875,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons can have accessibility labels 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibilityLabel_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 122, 255, 255)",
            },
            "Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  6,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  861,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -6,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -2,
                  6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  2,
                  44.00006103515625,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -6,
                  -6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  6,
                  -2,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  861,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  -6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  2,
                  44.00006103515625,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              873,
              56.00006103515625,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          873,
          56.00006103515625,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              846,
              28.999969482421875,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          14,
          14,
          0,
        ],
        "Opacity": 1,
        "Size": [
          846,
          28.999969482421875,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "accessibilityLabel_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      873,
      56.00006103515625,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons can have accessibility props 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibility_props",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "Submit Button",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 179)",
    },
    "Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          6,
          6,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          6,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          861,
          2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          -6,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          6,
          6,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          -2,
          6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          2,
          42.99993896484375,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          -6,
          -6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          6,
          6,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          6,
          -2,
          0,
        ],
        "Opacity": 1,
        "Size": [
          861,
          2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          0,
          -6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          6,
          6,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          0,
          6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          2,
          42.99993896484375,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              846,
              28.0001220703125,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          14,
          14,
          0,
        ],
        "Opacity": 1,
        "Size": [
          846,
          28.0001220703125,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "accessibility_props",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      873,
      54.99993896484375,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons can have accessibility states 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibilityState_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": false,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": false,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(249, 249, 249, 77)",
            },
            "Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  6,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  861,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -6,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -2,
                  6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  2,
                  44.00006103515625,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -6,
                  -6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  6,
                  -2,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  861,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  -6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  2,
                  44.00006103515625,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              873,
              56.00006103515625,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          873,
          56.00006103515625,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              846,
              28.9998779296875,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          14,
          14,
          0,
        ],
        "Opacity": 1,
        "Size": [
          846,
          28.9998779296875,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "accessibilityState_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      873,
      56.00006103515625,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons can have custom colors 1`] = `
{
  "Automation Tree": {
    "AutomationId": "cancel_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Cancel Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to cancel your application!",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(255, 59, 48, 255)",
            },
            "Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  6,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  861,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -6,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -2,
                  6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  2,
                  43.999969482421875,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  -6,
                  -6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  6,
                  -2,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  861,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  -6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  6,
                  6,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": [
                  0,
                  6,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  2,
                  43.999969482421875,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              873,
              55.999969482421875,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          873,
          55.999969482421875,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              846,
              29.000015258789062,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          14,
          14,
          0,
        ],
        "Opacity": 1,
        "Size": [
          846,
          29.000015258789062,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "cancel_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      873,
      55.999969482421875,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons have default styling 1`] = `
{
  "Automation Tree": {
    "AutomationId": "button_default_styling",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 179)",
    },
    "Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          6,
          6,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          6,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          861,
          2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          -6,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          6,
          6,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          -2,
          6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          2,
          43.99999237060547,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          -6,
          -6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          6,
          6,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          6,
          -2,
          0,
        ],
        "Opacity": 1,
        "Size": [
          861,
          2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          0,
          -6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          6,
          6,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 0)",
        },
        "Offset": [
          0,
          6,
          0,
        ],
        "Opacity": 1,
        "Size": [
          2,
          43.99999237060547,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              846,
              29.000015258789062,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          14,
          14,
          0,
        ],
        "Opacity": 1,
        "Size": [
          846,
          29.000015258789062,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "button_default_styling",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      873,
      55.99999237060547,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
